constraints/pod-security-policy-volumes-samples-psp-volume-types-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata: # kpt-merge: /psp-volume-types
  name: psp-volume-types
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    volumes:
      # - "*" # * may be used to allow all volume types
      - configMap
      - emptyDir
      - projected
      - secret
      - downwardAPI
      - persistentVolumeClaim
      #- hostPath #required for allowedHostPaths
      - flexVolume #required for allowedFlexVolumes
